manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: store-app-gateway
  namespace: store-app
  annotations:
    alb.networking.azure.io/alb-id: /subscriptions/<subscription-id>/resourceGroups/<resource-group>/providers/Microsoft.ServiceNetworking/trafficControllers/<agc-name>  # set in your private consumer (kustomize patch)
    alb.networking.azure.io/alb-frontend: fe-public-001
spec:
  gatewayClassName: azure-alb-external
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
